Make sidebar 100vw on small screens - adjust RemainingTiles styling for better responsiveness (grid -> flex) - introduce a CSS variable for sidebar width - fix a bug with wrong badge margin in RTL layout

--- a/packages/scrabble-solver/src/components/EmptyState/EmptyState.module.scss
+++ b/packages/scrabble-solver/src/components/EmptyState/EmptyState.module.scss
@@ -1,15 +1,14 @@
 .emptyState {
-  margin: 0 auto;
-  max-width: calc(2 * var(--sidebar--width) / 3);
   padding: var(--spacing--xl);
   font-family: var(--font--family);
   color: var(--color--foreground--secondary);
   text-align: center;
   text-transform: none;
+}
 
-  .tiles {
-    margin-bottom: var(--spacing--m);
-    height: 40px;
-    overflow: visible;
-  }
+.tiles {
+  display: inline-block;
+  margin-bottom: var(--spacing--m);
+  height: 40px;
+  overflow: visible;
 }
