--- a/packages/scrabble-solver/src/components/RemainingTiles/Character.module.scss
+++ b/packages/scrabble-solver/src/components/RemainingTiles/Character.module.scss
@@ -32,5 +32,5 @@
 
 .count {
   padding: var(--spacing--xs) 0;
-  text-align: center;
+  white-space: nowrap;
 }
