--- a/packages/scrabble-solver/src/styles/variables.scss
+++ b/packages/scrabble-solver/src/styles/variables.scss
@@ -76,8 +76,9 @@ $easeOutSine: cubic-bezier(0.61, 1, 0.88, 1);
 
   --focus--box-shadow--size: 6px;
 
-  --sidebar--width: 580px;
   --dictionary--height: 260px;
+  --sidebar--width: 370px;
+  --solver-column--width: 580px;
   --square-button-size: 32px;
   --text-input--height: 40px;
   --tooltip--background: #222;
